# movieclub

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
movieclub/: cli.py  data.csv  helpers.py  themoviedb.py
movieclub/api/: user_access.py
movieclub/framework/: config.py  rest_api.py  rest_object.py
tests/: test_movieclub.py
